--- a/src/accordion.module.css
+++ b/src/accordion.module.css
@@ -1,37 +1,7 @@
-:root {
-  /* gray */
-  --hsd-ui-color-gray-300: #d1d5db;
-  --hsd-ui-color-gray-200: #e5e7eb;
-
-  /* radii */
-  --hsd-ui-radii-md: 0.375rem; /* 6px */
-
-  /* spacing by type */
-  --hsd-ui-spacing-md: 1rem; /* 16px */
-
-  /* BOX SHADOW */
-  --hsd-ui-shadow-md: 0 4px 6px -1px rgb(0 0 0 / 0.1),
-    0 2px 4px -2px rgb(0 0 0 / 0.1);
-
-  /* new root css */
-
-  /* border width */
-  --hsd-ui-accordion-border-width: var(--hsd-ui-border, 1px);
-
-  /* color */
-  --hsd-ui-accordion-primary-color: var(--hsd-ui-color-gray-300, #d1d5db);
-  --hsd-ui-accordion-secondary-color: var(--hsd-ui-color-gray-200, #e5e7eb);
-
-  /* border radius */
-  --hsd-ui-accordion-border-radius: var(--hsd-ui-radii-md, 6px);
-}
-
 .hudoro-accordion {
-  border-radius: var(--hsd-ui-accordion-border-radius);
-  border: var(--hsd-ui-accordion-border-width) solid
-    var(--hsd-ui-accordion-secondary-color);
+  border-radius: var(--hsd-ui-radii-md, 6px);
+  border: var(--hsd-ui-border, 1px) solid var(--hsd-ui-color-gray-200, #e5e7eb);
   background: var(--hsd-ui-color-gray-50);
-  /* box-shadow: var(--hsd-ui-shadow-md); */
   overflow: hidden;
 }
 
@@ -48,7 +18,6 @@
 }
 .hudoro-accordion-button:hover {
   background: #edf0f2;
-  /* background: var(--hsd-ui-color-gray-300); */
 }
 .hudoro-accordion-button,
 .hudoro-accordion-panel {
@@ -56,17 +25,17 @@
   overflow: hidden;
 }
 .hudoro-accordion-panel {
-  padding-inline: var(--hsd-ui-spacing-md);
+  padding-inline: var(--hsd-ui-spacing-md, 14px);
 }
 .hudoro-accordion-button {
-  padding: var(--hsd-ui-spacing-md);
+  padding: var(--hsd-ui-spacing-md, 14px);
 }
 
 .hudoro-accordion-item {
   display: grid;
   grid-template-rows: max-content 0fr;
   transition: 0.3s;
-  border-bottom: 1px solid var(--hsd-ui-accordion-secondary-color);
+  border-bottom: 1px solid var(--hsd-ui-color-gray-200, #e5e7eb);
 }
 .hudoro-accordion-item:last-child {
   border-bottom: none;
@@ -77,8 +46,8 @@
 }
 
 .hudoro-accordion-item.active > .hudoro-accordion-panel {
-  padding-top: var(--hsd-ui-spacing-md);
-  padding-bottom: var(--hsd-ui-spacing-md);
+  padding-top: var(--hsd-ui-spacing-md, 14px);
+  padding-bottom: var(--hsd-ui-spacing-md, 14px);
 }
 
 .hudoro-accordion-arrow {
